--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,22 @@
+body{
+  margin: 0;
+  padding: 0;
+}
+
+.page {
+  width: 100vw;
+  height: 100vh;
+}
+
 main {
+  position: relative;
+  top: 50px;
   width: inherit;
-  margin: 0 auto;
   text-align: center;
   display: flex;
   flex-direction: column;
+  height: auto;
+  min-height: 100%;
 }
 
 #section1 {
@@ -220,4 +233,18 @@ main {
 .jobs-menu {
   flex-grow: 1;
   border: 1px solid #e1e2e3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.jobs-icon {
+  width: 32px;
+  height: 32px;
+  margin-top: 18px;
+}
+
+.jobs-expl {
+  font-weight: 600;
 }
