--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,16 @@
+body{
+  margin: 0;
+  padding: 0;
+  font-family: 'PretendardJP';
+}
+
+.page {
+  width: 100vw;
+  height: 100vh;
+}
+
 header {
-  z-index: 800;
+  z-index: 10;
   position: fixed;
   top: 0;
   width: inherit;
@@ -19,12 +30,43 @@ header .header{
 
 .header-left {
   margin: auto 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  cursor: pointer;
 }
 
 .menu-icon {
   margin-right: 10px;
   width: 17px;
-  height: 14px;
+}
+
+.menu-dropdown {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  background-color: #fff;
+}
+
+.menu-list {
+  padding: 5px 100px 5px 10px;
+  display: block;
+  color: #333;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 2.86;
+}
+
+#list-all {
+  font-size: 14px;
+}
+
+.menu-list:hover {
+  background-color: #e1e2e3;
+}
+
+.dropdown:hover .menu-dropdown {
+  display: block;
 }
 
 .logo-icon {
@@ -35,12 +77,28 @@ header .header ul {
   list-style: none;
 }
 
-header .header .header-center li {
-  float: left;
-  padding: 0 15px;
+.header-center {
+  margin: 0;
 }
 
-header .header .header-right li {
+.menu {
+  font-size: 14px;
+  line-height: 19px;
+  font-weight: 600;
+  color: #333;
+}
+
+.header-center li {
+  float: left;
+  padding: 15px;
+  cursor: pointer;
+}
+
+.header-center .menu:hover {
+  border-bottom: 1.5px solid rgb(103, 103, 103);
+}
+
+.header-right li {
   float: left;
   padding: 0 5px;
 }
@@ -48,13 +106,7 @@ header .header .header-right li {
 .header-right li button{
   border: none;
   background-color: inherit;
-}
-
-.menu {
-  font-size: 14px;
-  font-weight: 600;
-  font-family: 'PretendardJP';
-  color: #333;
+  cursor: pointer;
 }
 
 .corp-service {
@@ -63,4 +115,5 @@ header .header .header-right li {
   border: 1px solid #e1e2e3;
   border-radius: 50px;
   color: #333;
+  cursor: pointer;
 }
