--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,3 @@
-body{
-  margin: 0;
-  padding: 0;
-}
-
-.page {
-  width: 100vw;
-  height: 100vh;
-}
-
 main {
   position: relative;
   top: 50px;
@@ -21,25 +11,50 @@ main {
 
 #section1 {
   padding-top: 25px;
+  cursor: pointer;
 }
 
 .section2{
-  width: inherit;
   padding: 60px 0;
-  font-family: 'PretendardJP'
+}
+
+#section2-grid1 {
+  width: fit-content;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+}
+
+#question-btn {
+  background-color: inherit;
+  border: none;
+  padding: 0;
+  cursor: pointer;
 }
 
 .scroll {
-  margin: 30px 0;
-  flex-wrap: nowrap;
+  width: 1060px;
+  margin: 30px auto;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+.scroll::-webkit-scrollbar{
+  display:none;
 }
 
 .scroll button {
   padding: 9px 22px;
   background-color: inherit;
   border: 1px solid #e1e2e3;
+  color: #aaa;
   border-radius: 50px;
   font-size: 15px;
+  cursor: pointer;
+}
+
+.scroll button:hover {
+  background-color: #e1e2e3;
 }
 
 .career-list {
