--- a/css/whole.css
+++ b/css/whole.css
@@ -1,3 +1,34 @@
+body{
+  margin: 0;
+  padding: 0;
+  font-family: 'PretendardJP';
+}
+
+.page {
+  width: 100vw;
+  height: 100vh;
+}
+
+main {
+  position: relative;
+  top: 50px;
+  width: inherit;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  min-height: 100%;
+}
+
+li {
+  list-style: none;
+}
+
+button {
+  border: none;
+  background-color: inherit;
+}
+
 a {
   text-decoration: none;
 }
