--- a/css/main.css
+++ b/css/main.css
@@ -1,61 +1,47 @@
 #section1 {
-  width: inherit;
-  height: 300px;
   position: relative;
+  padding: 1.5rem;
+  height: 18.75rem;
   overflow: hidden;   
 }
 
 .slides{
   position: absolute;
-  padding: 0;
-}
-
-.slides li:not(:last-child){
-  float: left;
 }
 
 .slides li{
   float: left;
-  margin: 0 12px;
+  margin: 0 0.75rem;
 }
 
 .slides li img {
-  border-radius: 4px;
+  border-radius: 0.25rem;
 }
 
 .controller span{
   position:absolute;
-  top : 130px;
-  width : 30px;
-  padding : 20px 0;
+  top : 9rem;
+  width : 1.8rem;
+  padding : 1.25rem 0;
   opacity : .5;
   background-color : #fff;
-  text-align : center;
   color : #aaa;
-  border-radius : 50px;
+  border-radius : 3.1rem;
   cursor : pointer;
 }
 
 .controller .prev {
-  left : 250px;
+  left : 15.5rem;
 }
 
 .controller .next {
-  right : 250px;
-}
-
-.prev{
-  left: 10px;
-}
-
-.next{
-  right: 10px;
+  right : 15.5rem;
 }
 
 .section2{
-  padding: 60px 0;
+  padding: 3.75rem 0;
   margin: 0 auto;
-  width: 1060px;
+  width: 66.25rem;
 }
 
 #section2-grid1 {
@@ -68,15 +54,14 @@
 #question-button {
   background-color: inherit;
   border: none;
-  padding: 0;
   cursor: pointer;
 }
 
 #mini-popup {
   display: none;
   position: absolute;
-  padding: 20px;
-  max-width: 368px;
+  padding: 1.25rem;
+  max-width: 23rem;
   border: 1px solid #999;
   background-color: #fff;
   text-align: left;
@@ -93,24 +78,24 @@
 }
 
 #mini-popup-title {
-  font-size: 13px;
+  font-size: 0.81rem;
   font-weight: 700;
-  line-height: 19px;
+  line-height: 1.18rem;
   color: #000;
+  
 }
 
 #mini-popup-comment {
-  margin-top: 15px;
-  font-size: 13px;
+  margin-top: 0.9rem;
+  font-size: 0.81rem;
   font-weight: 400;
-  line-height: 19px;
+  line-height: 1.18rem;
   color: #333;
 }
 
-
 .scroll {
   width: inherit;
-  margin: 30px auto;
+  margin: 1.8rem auto;
   overflow: auto;
   white-space: nowrap;
 }
@@ -126,12 +111,12 @@
 }
 
 .scroll button {
-  padding: 9px 22px;
+  padding: 0.56rem 1.37rem;
   background-color: inherit;
   border: 1px solid #e1e2e3;
   color: #aaa;
-  border-radius: 50px;
-  font-size: 15px;
+  border-radius: 3.1rem;
+  font-size: 0.9rem;
   cursor: pointer;
 }
 
@@ -140,132 +125,146 @@
 }
 
 .career-list {
-  width: 1060px;
-  margin: 30px auto 0;
-  padding: 0;
+  width: 66.25rem;
+  margin-top: 1.8rem;
   display: flex;
   flex-wrap: wrap;
 }
 
 .career-list li {
-  margin: 0 5px;
-  width: 250px;
+  margin: 0 0.4rem 3.1rem 0.4rem;
+  width: 15.6rem;
 }
 
 .list-image {
-  width: 250px;
+  width: 15.6rem;
+  height: 10.9rem;
+  border-radius: 0.2rem;
+  object-fit: cover;
 }
 
 .list-title {
-  font-style: normal;
   font-weight: 700;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 1rem;
+  line-height: 1.5rem;
   color: #333;
-  margin: 17px 0 8px;
+  margin: 1rem 0 0.5rem;
   text-align: left;
 }
 
 .list-comment {
-  margin: 8px 0 0 0;
-  font-style: normal;
+  margin-top: 0.5rem;
   font-weight: 600;
-  font-size: 13px;
-  line-height: 21px;
+  font-size: 0.81rem;
+  line-height: 1.3rem;
   color: #aaa;
   text-align: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .profile-photo {
-  width: 30px;
-  height: 30px;
+  width: 1.8rem;
+  height: 1.8rem;
 }
 
 .writer {
-  margin: auto 5px;
-  white-space: nowrap;
-  font-style: normal;
+  margin: auto 0.31rem;
   font-weight: 600;
-  font-size: 13px;
+  font-size: 0.81rem;
   color: #aaa;
 }
 
 #other-content  {
-  width: 345px;
-  height: 50px;
-  padding: 10px 27px;
+  width: 21rem;
+  height: 3.1rem;
+  padding: 0.62rem 1.68rem;
   border: 1px solid #e1e2e3;
-  border-radius: 50px;
+  border-radius: 3.1rem;
   background-color: inherit;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 700;
 }
 
 .example {
   color : #aaa;
-  font-size: 15px;
+  font-size: 0.9rem;
 }
 
 .list-comment2 {
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: 500;
   color: #333;
   text-align: left;
 }
 
 .list-comment3 {
-  margin-bottom: 0;
-  font-size: 14px;
+  margin-top: 1rem;
+  font-size: 0.81rem;
   font-weight: 600;
   color: #333;
   text-align: left;
 }
 
+#VOD .list-title {
+  margin-top: 0.3rem;
+}
+
+#VOD .list-comment {
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 #line-banner {
-  width: 1060px;
-  padding: 21px 0;
+  width: 66.25rem;
+  padding: 1.31rem 0;
   margin: 0 auto;
-  border-radius: 50px;
+  border-radius: 3.1rem;
   color: white;
-  font-size: 17px;
+  font-size: 1rem;
   font-weight: 700;
   background-image: linear-gradient(90deg,#01a9fe -12%,#2f5fef 37%,#046afe 72%,#00d2dd 110%);
 }
 
 .career-list .event-list {
-  margin: 0;
-  padding: 8px;
-  width: 510px;
+  padding: 0.5rem;
+  width: 31rem;
 }
 
 .event-image {
-  width: 510px;
+  width: 31rem;
+  height: 17rem;
+  object-fit: cover;
 }
 
 #online-icon {
   width: fit-content;
-  height: 20px;
-  padding: 0 6px;
+  margin: 0.6rem 0;
+  padding: 0.1rem 0.37rem;
   background-color: black;
-  border-radius: 3px;
+  border-radius: 0.18rem;
   color: white;
   align-items: center;
 }
 
 #online {
-  margin: 0 0 0 3px;
   color: white;
-  font-size: 11px;
+  font-size: 0.68rem;
 }
 
 #section3 {
-  height: 158px;
-  padding: 60px 0;
+  height: 8.5rem;
+  padding: 3.75rem 0;
   background-color: #F7F7F7;
 }
 
 #section3-grid1 {
-  width: 1060px;
+  width: 66.25rem;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -279,20 +278,31 @@
   text-align: left;
 }
 
+#section3-grid3 {
+  height: 2.6rem;
+}
+
+#section3-grid2 p {
+  font-size: 14px;
+  line-height: 1.42;
+  color: #333333;
+}
+
 #logo-plus {
-  width: 160px;
+  width: 10rem;
 }
 
 #subscribe-reason {
-  margin: 0 0 0 3px;
-  font-size: 30px;
-  font-weight: 700;
+  margin-bottom: 0.18rem;
+  font-size: 1.8rem;
+  font-weight: 600;
 }
 
 #apply-subscribe {
-  width: 260px;
-  height: 50px;
-  border-radius: 50px;
+  margin-top: 1.5rem;
+  width: 17rem;
+  height: 3.1rem;
+  border-radius: 3.1rem;
   background-color: #36f;
   justify-content: center;
   align-items: center;
@@ -301,20 +311,20 @@
 }
 
 .check-icon {
-  width: 16px;
+  width: 1rem;
 }
 
 #apply-subscribe p {
-  margin: 0 2px;
+  margin: 0 0.12rem;
   color: white;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 600;
 }
 
 .jobs {
-  width: 1060px;
-  height: 102px;
-  margin: 30px auto;
+  width: 66.25rem;
+  height: 6.37rem;
+  margin: 1.8rem auto;
   display: flex;
   flex-direction: row;
 }
@@ -329,11 +339,11 @@
 }
 
 .jobs-icon {
-  width: 32px;
-  height: 32px;
-  margin-top: 18px;
+  width: 2rem;
+  height: 2rem;
 }
 
 .jobs-expl {
+  margin-top: 1rem;
   font-weight: 600;
 }
