--- a/css/develop.css
+++ b/css/develop.css
@@ -1,16 +1,7 @@
 .section1 {
-  position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
-  width: inherit;
-  background-color: #fff;
-}
-
-.job-list {
-  width: 1060px;
-  padding-top: 40px;
+  padding-top: 1.8rem;
+  width: 66.25rem;
   margin: 0 auto;
-  text-align: left;
 }
 
 .section1-grid {
@@ -19,64 +10,76 @@
 }
 
 .job-group, .job-category {
-  padding: 0;
-  background-color: inherit;
-  border: none;
   display: flex;
   flex-direction: row;
 }
 
 .job-group {
-  padding: 0 24px 0 0;
+  padding-right: 1.5rem;
   border-right: 1px solid #e1e2e3;
-  height: 26px;
 }
 
 .job-group-title{
-  margin: 0 15px 0 0;
-  font-size: 24px;
+  margin-right: 0.9rem;
+  font-size: 1.5rem;
   color: #333;
-  line-height: 29px;
-  border: none;
+  line-height: 1.8rem;
 }
 
 .job-group .job-group-title{
-  font-weight: 700;
+  font-weight: 600;
 }
 
 .more-button {
   border: 1px solid #e1e2e3;
-  border-radius: 50px;
+  border-radius: 3.1rem;
   background-color: #fff;
-  width: 26px;
-  height: 26px;
+  width: 1.6rem;
+  height: 1.6rem;
 }
 
 .job-category {
-  padding-left: 24px;
+  padding-left: 1.5rem;
 }
 
-.section1-grid1 {
-  padding-top: 30px;
-  margin-bottom: 25px;
+.section-scroll {
+  padding-top: 1rem;
+  padding-bottom: 1.5rem;
+  background-color: #fff;
+  border-bottom: 1px solid #ececec;
+}
+
+.section-scroll-content {
+  width: 66.25rem;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.section-scroll-grid {
+  padding-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
+  border-bottom: 1px solid #ececec;
 }
 
 .filter-button {
   background-color: inherit;
-  padding: 10px 15px;
+  padding: 0.62rem 0.9rem;
+  margin-right: 0.62rem;
+  height: 2.5rem;
   border: 1px solid #ececec;
-  border-radius: 5px;
-  margin-right: 10px;
+  border-radius: 0.31rem;
   align-items: center;
+  font-size: 0.85rem;
 }
 
 .filter-title {
-  margin-right: 15px;
+  margin-right: 0.9rem;
 }
 
 .button-display {
   color: #3366FF;
   font-weight: 600;
+  margin-right: 0.3rem;
 }
 
 .slick-list {
@@ -85,14 +88,14 @@
 }
 
 .slick-list div{
-  margin-top: 17px;
-  padding: 8px 14px;
+  padding: 0.5rem 0.8rem;
+  margin-right: 0.5rem;
   border: none;
-  border-radius: 20px;
-  background-color: rgb(209, 255, 219);
-  font-size: 13px;
-  line-height: 16px;
-  font-weight: 400;
+  border-radius: 1.25rem;
+  background-color: #F2FBF5;
+  font-size: 0.81rem;
+  line-height: 1rem;
+  font-weight: 300;
   color: #333;
 }
 
@@ -102,20 +105,164 @@
 }
 
 .slick-list div button img {
-  margin-left: 5px;
-  width: 16px;
+  margin-left: 0.31rem;
+  width: 1rem;
 }
 
 .section2 {
-  width: 1060px;
-  padding-top: 40px;
+  width: 66.25rem;
+  padding-top: 2.5rem;
   margin: 0 auto;
   text-align: left;
 }
 
 .bookmark {
-  font-size: 15px;
+  margin-bottom: 1.25rem;
+  font-size: 0.9rem;
   font-weight: 600;
-  line-height: 24px;
+  line-height: 1.5rem;
   color: #36f;
+}
+
+.slider-item {
+  margin-top: 0.87rem;
+}
+
+.slider-item li{
+  width: 12.31rem;
+  height: 16.93rem;
+  border: 1px solid #ececec;
+  border-radius: 0.2rem;
+}
+
+.slider-item-top {
+  width: inherit;
+  height: 9.18rem;
+  border-radius: inherit;
+  overflow: hidden;
+}
+
+.slider-item-image {
+  width: inherit;
+  height: inherit;
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+  transition: all 0.3s linear;
+}
+
+.slider-item-image:hover {
+  transform: scale(1.1);
+}
+
+.slider-item-middle {
+  position: relative;
+  top: -1.6rem;
+  left: 1rem;
+  width: 3rem;
+  height: 3rem;
+  border: 1px solid #ececec;
+}
+
+.slider-item-middle img {
+  width: inherit;
+  height: inherit;
+}
+
+.slider-item-bottom {
+  height: 7.75rem;
+  padding: 0 1rem;
+}
+
+.slidder-company-title {
+  font-size: 1rem;
+  font-weight: 600;
+  color: #333;
+  overflow: hidden;
+}
+
+.slidder-company-position {
+  margin-top: 0.37rem;
+  color: #999;
+  font-size: 0.87rem;
+}
+
+.section3 {
+  margin: 0 auto;
+  width: 66.25rem;
+}
+
+.job-card {
+  margin-top: 1.8rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.job-card li {
+  margin: 0 0.4rem;
+  padding-bottom: 3.1rem;
+  width: 15.6rem;
+}
+
+.job-card li a {
+  text-align: left;
+}
+
+.job-card-image {
+  width: 15.6rem;
+  height: 10.9rem;
+  border-radius: 0.2rem;
+  object-fit: cover;
+}
+
+.job-card-category {
+  color: #333;
+  font-size: 1.12rem;
+  font-weight: 600;
+  line-height: 1.2;
+  max-height: 2.4em;
+  overflow: hidden;
+}
+
+.job-card-company-name {
+  font-size: 0.87rem;
+  margin-top: 0.62rem;
+  color: #333;
+}
+
+.job-card-container {
+  margin-top: 0.25rem;
+  padding: 0.2rem 0.3rem;
+  width: fit-content;
+  border: 1px solid #00aead;
+  border-radius: 0.1rem;
+  font-size: 0.62rem;
+  font-weight: 400;
+  color: #00aead;
+}
+
+.job-card-container-massage {
+  display: none;
+  position: absolute;
+  padding: 0.8rem 1rem;
+  border: 1px solid #333;
+  font-size: 0.8rem;
+  color: #333;
+  background-color: #fff;
+}
+
+.job-card-container-hover:hover .job-card-container-massage {
+  display: block;
+}
+
+.job-card-location {
+  font-size: 0.87rem;
+  margin-top: 0.62rem;
+  color: #999999;
+}
+
+.job-card-reward {
+  margin-top: 0.62rem;
+  color: #333;
+  font-size: 0.87rem;
+  font-weight: 500;
 }
