--- a/css/font.css
+++ b/css/font.css
@@ -1,4 +1,4 @@
 @font-face {
   font-family: 'PretendardJP';
-  src: url('./font/PretendardJP-Medium.subset.117.woff2');
+  src: './font/PretendardJP-Medium.subset.117.woff2';
 }
