--- a/css/whole.css
+++ b/css/whole.css
@@ -1,7 +1,48 @@
-body{
-  margin: 0;
-  padding: 0;
+html, body, div, span, applet, object, iframe,
+p, blockquote, pre, a, abbr, acronym, address,
+big, cite, code, del, dfn, px, img, ins, kbd,
+q, s, samp, small, strike, strong, sub, sup,
+tt, var, b, u, i, center, dl, dt, dd, ol, ul,
+li, fieldset, form, label, legend, table, caption,
+tbody, tfoot, thead, tr, th, td, article, aside,
+canvas, details, pxbed, figure, figcaption, footer,
+header, hgroup, menu, nav, output, ruby, section,
+summary, time, mark, audio, video, button {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
   font-family: 'PretendardJP';
+}
+
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+
+body {
+	line-height: 1;
+}
+
+ol, ul {
+	list-style: none;
+}
+
+blockquote, q {
+	quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
 .page {
@@ -11,7 +52,7 @@ body{
 
 main {
   position: relative;
-  top: 50px;
+  top: 3.1rem;
   width: inherit;
   text-align: center;
   display: flex;
@@ -20,15 +61,21 @@ main {
   min-height: 100%;
 }
 
-li {
-  list-style: none;
-}
-
 button {
   border: none;
   background-color: inherit;
+  cursor: pointer;
 }
 
 a {
   text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
+
+hr {
+  width : 66.25rem;
+  border: 1px solid #ececec;
 }
