--- a/css/main.css
+++ b/css/main.css
@@ -30,11 +30,11 @@
   cursor : pointer;
 }
 
-.controller .prev {
+.controller .slide-prev {
   left : 15.5rem;
 }
 
-.controller .next {
+.controller .slide-next {
   right : 15.5rem;
 }
 
@@ -52,8 +52,8 @@
 }
 
 #question-button {
-  background-color: inherit;
-  border: none;
+  color: #999;
+  margin-left: 0.2rem;
   cursor: pointer;
 }
 
@@ -73,7 +73,7 @@
   justify-content: space-between;
 }
 
-#mini-popup-top button {
+#mini-popup-top i {
   cursor: pointer;
 }
 
@@ -82,7 +82,6 @@
   font-weight: 700;
   line-height: 1.18rem;
   color: #000;
-  
 }
 
 #mini-popup-comment {
@@ -93,17 +92,23 @@
   color: #333;
 }
 
-.scroll {
-  width: inherit;
-  margin: 1.8rem auto;
-  overflow: auto;
-  white-space: nowrap;
-}
-
-.scroll-button {
+.section2-scroll {
   display: flex;
   flex-direction: row;
+}
+
+.scroll-bar {
+  position: relative;
+  width: 63rem;
   justify-content: space-between;
+  margin: 1.8rem 0;
+  overflow: hidden;
+}
+
+.scroll {  
+  position: inherit;
+  white-space: nowrap;
+  width: 63rem;
 }
 
 .scroll::-webkit-scrollbar{
@@ -111,18 +116,61 @@
 }
 
 .scroll button {
-  padding: 0.56rem 1.37rem;
+  padding: 0.7rem 1.37rem;
   background-color: inherit;
   border: 1px solid #e1e2e3;
   color: #aaa;
   border-radius: 3.1rem;
   font-size: 0.9rem;
+  line-height: 1rem;
   cursor: pointer;
 }
 
 .scroll button:hover {
   background-color: #e1e2e3;
 }
+
+.scroll-button-left, .scroll-button-right {
+  position: absolute;
+  top: 0;
+  width: 5rem;
+  height: 2.53rem;
+  background: linear-gradient(90deg,#fff 50%,hsla(0,0%,100%,0));
+} 
+
+.scroll-button-right {
+  right: 0rem;
+  background: linear-gradient(270deg,#fff 50%,hsla(0,0%,100%,0));
+}
+
+.scroll-button-left .scroll-prev, .scroll-button-right .scroll-next {
+  display: flex;
+  width: 2.5rem;
+  height: 2.5rem;
+  border: 1px solid #e1e2e3;
+  border-radius: 50%;
+  color: #aaa;
+  background-color: #fff;
+}
+
+.scroll-next {
+  margin-left: 2.5rem;
+}
+
+.scroll-button-left i, .scroll-button-right i {
+  margin: auto;
+}
+
+.ellipsis {
+  width: 2.5rem;
+  height: 2.5rem;
+  border: 1px solid #e1e2e3;
+  border-radius: 10%;
+  color: #aaa;
+  background-color: #fff;
+  margin: 1.8rem 0 1.8rem 0.3rem;
+}
+
 
 .career-list {
   width: 66.25rem;
@@ -257,13 +305,13 @@
   font-size: 0.68rem;
 }
 
-#section3 {
+#reason {
   height: 8.5rem;
   padding: 3.75rem 0;
   background-color: #F7F7F7;
 }
 
-#section3-grid1 {
+#reason-grid1 {
   width: 66.25rem;
   margin: 0 auto;
   display: flex;
@@ -271,18 +319,18 @@
   justify-content: space-between;
 }
 
-#section3-grid2 {
+#reason-grid2 {
   width: inherit;
   display: flex;
   flex-direction: column;
   text-align: left;
 }
 
-#section3-grid3 {
+#reason-grid3 {
   height: 2.6rem;
 }
 
-#section3-grid2 p {
+#reason-grid2 .reason-grid2-comment {
   font-size: 14px;
   line-height: 1.42;
   color: #333333;
@@ -330,7 +378,7 @@
 }
 
 .jobs-menu {
-  flex-grow: 1;
+  width: 16.56rem;
   border: 1px solid #e1e2e3;
   display: flex;
   flex-direction: column;
