--- a/css/whole.css
+++ b/css/whole.css
@@ -2,7 +2,7 @@ html, body, div, span, applet, object, iframe,
 p, blockquote, pre, a, abbr, acronym, address,
 big, cite, code, del, dfn, px, img, ins, kbd,
 q, s, samp, small, strike, strong, sub, sup,
-tt, var, b, u, i, center, dl, dt, dd, ol, ul,
+tt, var, b, u, center, dl, dt, dd, ol, ul,
 li, fieldset, form, label, legend, table, caption,
 tbody, tfoot, thead, tr, th, td, article, aside,
 canvas, details, pxbed, figure, figcaption, footer,
@@ -73,9 +73,14 @@ a {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
+  padding: 0;
 }
 
 hr {
   width : 66.25rem;
   border: 1px solid #ececec;
+}
+
+.fa-lg {
+  line-height: inherit !important;
 }
