--- a/css/signup.css
+++ b/css/signup.css
@@ -20,9 +20,9 @@
 }
 
 .signup-head {
-  padding: 1rem 1.25rem;
+    padding: 1rem 1.25rem;
   color: #333;
-  font-size: 1rem;
+  font-size: 1.12rem;
   font-weight: 500;
 }
 
@@ -37,6 +37,8 @@
 
 .signup-content {
   padding: 1.25rem;
+  height: 35rem;
+  overflow: scroll;
 }
 
 .signup-input {
@@ -44,7 +46,7 @@
   text-align: left;
 }
 
-.signup-input .input-name {
+.signup-input p {
   font-size: 0.87rem;
   font-weight: 400;
   color: #767676;
@@ -104,6 +106,21 @@
   bottom: 0;
   margin-top: 0.375rem;
   font-size: 0.75rem;
+}
+
+.agree-checkbox {
+  text-align: left;
+}
+
+.agree-checkbox-one {
+  height: 2rem;
+  font-size: 0.9rem;
+  color: #999999;
+}
+
+.panel-buttons {
+  padding: 1.875rem 0 1rem 0;
+  /* background: linear-gradient(0deg,#fff 50%,hsla(0,0%,100%,0)); */
 }
 
 .signup-button {
